[gd_scene load_steps=36 format=3 uid="uid://dk0bqnu20mg2a"]

[ext_resource type="Texture2D" uid="uid://evn4p5by1ap8" path="res://assets/images/entities/player.png" id="1_jct2x"]
[ext_resource type="Script" uid="uid://r1srmflo6cgp" path="res://source/world/entities/player.gd" id="1_xim07"]
[ext_resource type="Script" uid="uid://d67xl4368hk1" path="res://source/core/state_machine/state_machine.gd" id="3_glqx2"]
[ext_resource type="Script" uid="uid://t3w6cos70bby" path="res://source/core/state_machine/state.gd" id="4_favdl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_glqx2"]
atlas = ExtResource("1_jct2x")
region = Rect2(0, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_favdl"]
atlas = ExtResource("1_jct2x")
region = Rect2(16, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2357"]
atlas = ExtResource("1_jct2x")
region = Rect2(16, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4eph7"]
atlas = ExtResource("1_jct2x")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7t8kb"]
atlas = ExtResource("1_jct2x")
region = Rect2(0, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3bky"]
atlas = ExtResource("1_jct2x")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhjrr"]
atlas = ExtResource("1_jct2x")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkki2"]
atlas = ExtResource("1_jct2x")
region = Rect2(32, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l4ysx"]
atlas = ExtResource("1_jct2x")
region = Rect2(16, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_clmmo"]
atlas = ExtResource("1_jct2x")
region = Rect2(0, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ggjli"]
atlas = ExtResource("1_jct2x")
region = Rect2(32, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_asuwg"]
atlas = ExtResource("1_jct2x")
region = Rect2(16, 160, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_72fmy"]
atlas = ExtResource("1_jct2x")
region = Rect2(0, 128, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_li2ga"]
atlas = ExtResource("1_jct2x")
region = Rect2(0, 160, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4mop"]
atlas = ExtResource("1_jct2x")
region = Rect2(32, 128, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a0os5"]
atlas = ExtResource("1_jct2x")
region = Rect2(16, 128, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8va7w"]
atlas = ExtResource("1_jct2x")
region = Rect2(0, 128, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pnvfq"]
atlas = ExtResource("1_jct2x")
region = Rect2(16, 192, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_28hxr"]
atlas = ExtResource("1_jct2x")
region = Rect2(32, 192, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k00wa"]
atlas = ExtResource("1_jct2x")
region = Rect2(0, 192, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jpj85"]
atlas = ExtResource("1_jct2x")
region = Rect2(16, 192, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w1lkv"]
atlas = ExtResource("1_jct2x")
region = Rect2(0, 128, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5tg1"]
atlas = ExtResource("1_jct2x")
region = Rect2(0, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_fhjrr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_glqx2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_favdl")
}],
"loop": true,
"name": &"dead",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2357")
}],
"loop": true,
"name": &"small_fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4eph7")
}],
"loop": true,
"name": &"small_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7t8kb")
}],
"loop": true,
"name": &"small_jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3bky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhjrr")
}],
"loop": true,
"name": &"small_run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkki2")
}],
"loop": true,
"name": &"small_swin_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4ysx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_clmmo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ggjli")
}],
"loop": true,
"name": &"small_swin_move",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_asuwg")
}],
"loop": true,
"name": &"super_fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_72fmy")
}],
"loop": true,
"name": &"super_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_li2ga")
}],
"loop": true,
"name": &"super_jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4mop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0os5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8va7w")
}],
"loop": true,
"name": &"super_run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnvfq")
}],
"loop": true,
"name": &"super_swin_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_28hxr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k00wa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jpj85")
}],
"loop": true,
"name": &"super_swin_move",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1lkv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5tg1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1lkv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5tg1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1lkv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5tg1")
}],
"loop": false,
"name": &"transform",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xim07"]
radius = 6.0
height = 20.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xim07"]
size = Vector2(12, 21)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3tcuc"]
size = Vector2(12, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_glqx2"]
radius = 6.0

[sub_resource type="Animation" id="Animation_3tcuc"]
resource_name = "squash"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(0.2, 2, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.25, 0.75), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(0.2, 2, 1),
"update": 0,
"values": [Vector2(0, -16), Vector2(0, -12), Vector2(0, -16)]
}

[sub_resource type="Animation" id="Animation_42p1r"]
resource_name = "stretch"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(0.2, 2, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.75, 1.25), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(0.2, 2, 1),
"update": 0,
"values": [Vector2(0, -16), Vector2(0, -20), Vector2(0, -16)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sw377"]
_data = {
&"squash": SubResource("Animation_3tcuc"),
&"stretch": SubResource("Animation_42p1r")
}

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_xim07")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_fhjrr")
animation = &"small_idle"

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -10)
shape = SubResource("CapsuleShape2D_xim07")

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2(0, -11)
collision_layer = 0
collision_mask = 12

[node name="Collision" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_xim07")

[node name="GroundDetector" type="Area2D" parent="."]
collision_layer = 0

[node name="Collision" type="CollisionShape2D" parent="GroundDetector"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_3tcuc")

[node name="WaterDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="Collision" type="CollisionShape2D" parent="WaterDetector"]
position = Vector2(0, -10)
shape = SubResource("CircleShape2D_glqx2")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_glqx2")
initial_state = NodePath("IdleState")
metadata/_custom_type_script = "uid://d67xl4368hk1"

[node name="IdleState" type="Node" parent="StateMachine"]
script = ExtResource("4_favdl")
metadata/_custom_type_script = "uid://t3w6cos70bby"

[node name="RunState" type="Node" parent="StateMachine"]
script = ExtResource("4_favdl")
metadata/_custom_type_script = "uid://t3w6cos70bby"

[node name="JumpState" type="Node" parent="StateMachine"]
script = ExtResource("4_favdl")
metadata/_custom_type_script = "uid://t3w6cos70bby"

[node name="FallState" type="Node" parent="StateMachine"]
script = ExtResource("4_favdl")
metadata/_custom_type_script = "uid://t3w6cos70bby"

[node name="SwinIdleState" type="Node" parent="StateMachine"]
script = ExtResource("4_favdl")
metadata/_custom_type_script = "uid://t3w6cos70bby"

[node name="SwinMoveState" type="Node" parent="StateMachine"]
script = ExtResource("4_favdl")
metadata/_custom_type_script = "uid://t3w6cos70bby"

[node name="TransformState" type="Node" parent="StateMachine"]
script = ExtResource("4_favdl")
metadata/_custom_type_script = "uid://t3w6cos70bby"

[node name="DeadFreezeState" type="Node" parent="StateMachine"]
script = ExtResource("4_favdl")
metadata/_custom_type_script = "uid://t3w6cos70bby"

[node name="DeadState" type="Node" parent="StateMachine"]
script = ExtResource("4_favdl")
metadata/_custom_type_script = "uid://t3w6cos70bby"

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_sw377")
}

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_entered" from="GroundDetector" to="." method="_on_ground_detector_body_entered"]
[connection signal="body_entered" from="WaterDetector" to="." method="_on_water_detector_body_entered"]
[connection signal="body_exited" from="WaterDetector" to="." method="_on_water_detector_body_exited"]
[connection signal="entered" from="StateMachine/IdleState" to="." method="_on_idle_state_entered"]
[connection signal="physics_updated" from="StateMachine/IdleState" to="." method="_on_idle_physics_updated"]
[connection signal="entered" from="StateMachine/RunState" to="." method="_on_run_state_entered"]
[connection signal="physics_updated" from="StateMachine/RunState" to="." method="_on_run_physics_updated"]
[connection signal="entered" from="StateMachine/JumpState" to="." method="_on_jump_state_entered"]
[connection signal="physics_updated" from="StateMachine/JumpState" to="." method="_on_jump_state_physics_updated"]
[connection signal="entered" from="StateMachine/FallState" to="." method="_on_fall_state_entered"]
[connection signal="physics_updated" from="StateMachine/FallState" to="." method="_on_fall_state_physics_updated"]
[connection signal="entered" from="StateMachine/SwinIdleState" to="." method="_on_swin_idle_state_entered"]
[connection signal="physics_updated" from="StateMachine/SwinIdleState" to="." method="_on_swin_idle_state_physics_updated"]
[connection signal="entered" from="StateMachine/SwinMoveState" to="." method="_on_swin_move_state_entered"]
[connection signal="physics_updated" from="StateMachine/SwinMoveState" to="." method="_on_swin_move_state_physics_updated"]
[connection signal="entered" from="StateMachine/TransformState" to="." method="_on_transform_state_entered"]
[connection signal="entered" from="StateMachine/DeadFreezeState" to="." method="_on_dead_freeze_state_entered"]
[connection signal="entered" from="StateMachine/DeadState" to="." method="_on_dead_state_entered"]
[connection signal="physics_updated" from="StateMachine/DeadState" to="." method="_on_dead_state_physics_updated"]
